@@ -9,18 +9,19 @@ import com.zjt.codingsandbox.model.JudgeInfo;
 import com.zjt.codingsandbox.sandbox.CodeSandbox;
 import com.zjt.codingsandbox.utils.ProcessUtils;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.stereotype.Component;
 
 import java.io.File;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
 
 /**
- * Node 代码沙箱模板方法的实现
+ * node 代码沙箱模板方法的实现
  */
 @Slf4j
+@Component
 public abstract class NodeCodeSandboxTemplate implements CodeSandbox {
 
     private static final String GLOBAL_CODE_DIR_NAME = "tmpJsCode";
@@ -28,6 +29,10 @@ public abstract class NodeCodeSandboxTemplate implements CodeSandbox {
     private static final String GLOBAL_JS_FILE_NAME = "Main.js";
 
     private static final long TIME_OUT = 5000L;
+
+    private static final String NODE18 = "/Users/zz/.nvm/versions/node/v18.20.7/bin/node";
+
+    private static final Boolean IS_DEV = true;
 
     @Override
     public ExecuteCodeResponse executeCode(ExecuteCodeRequest executeCodeRequest) {
@@ -37,20 +42,29 @@ public abstract class NodeCodeSandboxTemplate implements CodeSandbox {
 
         File userCodeFile = saveCodeToFile(code);
 
-        ExecuteMessage compileFileExecuteMessage = compileFile(userCodeFile);
-        System.out.println(compileFileExecuteMessage);
+        for (int i = 0; i < inputList.size(); i++) {
+            saveInputToFile(userCodeFile.getParent(), inputList.get(i), i);
+        }
 
-        List<ExecuteMessage> executeMessageList = runFile(userCodeFile, inputList);
+        List<ExecuteMessage> executeMessageList = runCode(userCodeFile, inputList);
 
         ExecuteCodeResponse outputResponse = getOutputResponse(executeMessageList);
 
-        boolean b = deleteFile(userCodeFile);
-        if (!b) {
-            log.error("deleteFile error, userCodeFilePath = {}", userCodeFile.getAbsolutePath());
+        if (!IS_DEV){
+            boolean b = deleteFile(userCodeFile);
+            if (!b) {
+                log.error("deleteFile error, userCodeFilePath = {}", userCodeFile.getAbsolutePath());
+            }
         }
+
         return outputResponse;
     }
 
+    public File saveInputToFile(String parentPath, String input, Number i){
+        String inputFilePath = parentPath + File.separator + i + ".txt";
+        File file = FileUtil.writeString(input, inputFilePath, StandardCharsets.UTF_8);
+        return  file;
+    }
 
     /**
      * code -> file
@@ -68,49 +82,24 @@ public abstract class NodeCodeSandboxTemplate implements CodeSandbox {
         // 把用户的代码隔离存放
         String userCodeParentPath = globalCodePathName + File.separator + UUID.randomUUID();
         String userCodePath = userCodeParentPath + File.separator + GLOBAL_JS_FILE_NAME;
-        File userCodeFile = FileUtil.writeString(code, userCodePath, StandardCharsets.UTF_8);
-        return userCodeFile;
-    }
-
-    /**
-     * JavaScript 无需编译，保留该步骤用于对齐统一流程
-     * @param userCodeFile
-     * @return
-     */
-    public ExecuteMessage compileFile(File userCodeFile) {
-        ExecuteMessage executeMessage = new ExecuteMessage();
-        executeMessage.setExitValue(0);
-        executeMessage.setMessage("JavaScript does not require compilation");
-        executeMessage.setTime(0L);
-        return executeMessage;
+        File file = FileUtil.writeString(code, userCodePath, StandardCharsets.UTF_8);
+        return file;
     }
 
     /**
      * 3、执行文件，获得执行结果列表
-     * @param userCodeFile
+     * @param codeFile
      * @param inputList
      * @return
      */
-    public List<ExecuteMessage> runFile(File userCodeFile, List<String> inputList) {
-        if (inputList == null || inputList.isEmpty()) {
-            inputList = new ArrayList<>();
-            inputList.add("");
-        }
-
+    public List<ExecuteMessage> runCode(File codeFile, List<String> inputList) {
         List<ExecuteMessage> executeMessageList = new ArrayList<>();
         for (String inputArgs : inputList) {
+            String runCmd = String.format("%s %s", NODE18 , codeFile.getAbsolutePath());
             try {
-                List<String> command = new ArrayList<>();
-                command.add("node");
-                command.add(userCodeFile.getAbsolutePath());
-                if (StrUtil.isNotBlank(inputArgs)) {
-                    command.addAll(Arrays.asList(inputArgs.trim().split("\\s+")));
-                }
-                Process runProcess = new ProcessBuilder(command)
-                        .redirectErrorStream(true)
-                        .start();
-                // 超时控制
-                new Thread(() -> {
+                Process runProcess = Runtime.getRuntime().exec(runCmd);
+                // 超时控制 守护进程
+                Thread timeoutThread = new Thread(() -> {
                     try {
                         Thread.sleep(TIME_OUT);
                         System.out.println("超时了，中断");
@@ -118,8 +107,12 @@ public abstract class NodeCodeSandboxTemplate implements CodeSandbox {
                     } catch (InterruptedException e) {
                         throw new RuntimeException(e);
                     }
-                }).start();
-                ExecuteMessage executeMessage = ProcessUtils.runProcess(runProcess, "运行");
+                });
+                timeoutThread.setDaemon(true);
+                timeoutThread.start();
+
+                ExecuteMessage executeMessage = ProcessUtils.runProcessWithSin(runProcess, "运行", inputArgs);
+
                 System.out.println(executeMessage);
                 executeMessageList.add(executeMessage);
             } catch (Exception e) {
@@ -130,15 +123,16 @@ public abstract class NodeCodeSandboxTemplate implements CodeSandbox {
     }
 
     /**
-     * 4、获取输出结果
-     * @param executeMessageList
-     * @return
+     * 获取ExecuteCodeResponse
+     * @param executeMessageList List<ExecuteMessage>
+     * @return ExecuteCodeResponse
      */
     public ExecuteCodeResponse getOutputResponse(List<ExecuteMessage> executeMessageList) {
         ExecuteCodeResponse executeCodeResponse = new ExecuteCodeResponse();
         List<String> outputList = new ArrayList<>();
         // 取用时最大值，便于判断是否超时
         long maxTime = 0;
+        long maxMemory = 0;
         for (ExecuteMessage executeMessage : executeMessageList) {
             String errorMessage = executeMessage.getErrMessage();
             if (StrUtil.isNotBlank(errorMessage)) {
@@ -148,9 +142,14 @@ public abstract class NodeCodeSandboxTemplate implements CodeSandbox {
                 break;
             }
             outputList.add(executeMessage.getMessage());
+            // update maxTime and maxMemory
             Long time = executeMessage.getTime();
+            Long memory = executeMessage.getMemory();
             if (time != null) {
                 maxTime = Math.max(maxTime, time);
+            }
+            if (memory != null){
+                maxMemory = Math.max(maxMemory, memory);
             }
         }
         // 正常运行完成
@@ -160,18 +159,19 @@ public abstract class NodeCodeSandboxTemplate implements CodeSandbox {
         executeCodeResponse.setOutputList(outputList);
         JudgeInfo judgeInfo = new JudgeInfo();
         judgeInfo.setTime(maxTime);
+        judgeInfo.setMemory(maxMemory / 1024 / 1024);
         executeCodeResponse.setJudgeInfo(judgeInfo);
         return executeCodeResponse;
     }
 
     /**
-     * clear
-     * @param userCodeFile
-     * @return
+     * delete codeFile
+     * @param codeFile 代码文件
+     * @return Boolean isDeleted
      */
-    public boolean deleteFile(File userCodeFile) {
-        if (userCodeFile.getParentFile() != null) {
-            String userCodeParentPath = userCodeFile.getParentFile().getAbsolutePath();
+    public boolean deleteFile(File codeFile) {
+        if (codeFile.getParentFile() != null) {
+            String userCodeParentPath = codeFile.getParentFile().getAbsolutePath();
             boolean del = FileUtil.del(userCodeParentPath);
             System.out.println("删除" + (del ? "成功" : "失败"));
             return del;
